# service-generator/spring-server/src/main/java/io/swagger/model/SingleEndpointConfiguration.java
@@ -15,9 +15,12 @@ import javax.validation.constraints.*;
 /**
  * SingleEndpointConfiguration
  */
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-09-20T17:09:45.498Z")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-09-21T16:14:04.338Z")
 
 public class SingleEndpointConfiguration   {
+  @JsonProperty("name")
+  private String name = null;
+
   @JsonProperty("path")
   private String path = null;
 
@@ -57,8 +60,32 @@ public class SingleEndpointConfiguration   {
   @JsonProperty("method")
   private MethodEnum method = null;
 
-  @JsonProperty("fields")
-  private List<FieldDefinition> fields = new ArrayList<FieldDefinition>();
+  @JsonProperty("input")
+  private List<FieldDefinition> input = new ArrayList<FieldDefinition>();
+
+  @JsonProperty("output")
+  private List<FieldDefinition> output = new ArrayList<FieldDefinition>();
+
+  public SingleEndpointConfiguration name(String name) {
+    this.name = name;
+    return this;
+  }
+
+   /**
+   * Short service name
+   * @return name
+  **/
+  @ApiModelProperty(required = true, value = "Short service name")
+  @NotNull
+
+
+  public String getName() {
+    return name;
+  }
+
+  public void setName(String name) {
+    this.name = name;
+  }
 
   public SingleEndpointConfiguration path(String path) {
     this.path = path;
@@ -102,31 +129,58 @@ public class SingleEndpointConfiguration   {
     this.method = method;
   }
 
-  public SingleEndpointConfiguration fields(List<FieldDefinition> fields) {
-    this.fields = fields;
+  public SingleEndpointConfiguration input(List<FieldDefinition> input) {
+    this.input = input;
     return this;
   }
 
-  public SingleEndpointConfiguration addFieldsItem(FieldDefinition fieldsItem) {
-    this.fields.add(fieldsItem);
+  public SingleEndpointConfiguration addInputItem(FieldDefinition inputItem) {
+    this.input.add(inputItem);
     return this;
   }
 
    /**
-   * Detailed filed descriptions
-   * @return fields
+   * Detailed input descriptions
+   * @return input
   **/
-  @ApiModelProperty(required = true, value = "Detailed filed descriptions")
+  @ApiModelProperty(required = true, value = "Detailed input descriptions")
   @NotNull
 
   @Valid
 
-  public List<FieldDefinition> getFields() {
-    return fields;
+  public List<FieldDefinition> getInput() {
+    return input;
   }
 
-  public void setFields(List<FieldDefinition> fields) {
-    this.fields = fields;
+  public void setInput(List<FieldDefinition> input) {
+    this.input = input;
+  }
+
+  public SingleEndpointConfiguration output(List<FieldDefinition> output) {
+    this.output = output;
+    return this;
+  }
+
+  public SingleEndpointConfiguration addOutputItem(FieldDefinition outputItem) {
+    this.output.add(outputItem);
+    return this;
+  }
+
+   /**
+   * Detailed input descriptions
+   * @return output
+  **/
+  @ApiModelProperty(required = true, value = "Detailed input descriptions")
+  @NotNull
+
+  @Valid
+
+  public List<FieldDefinition> getOutput() {
+    return output;
+  }
+
+  public void setOutput(List<FieldDefinition> output) {
+    this.output = output;
   }
 
 
@@ -139,14 +193,16 @@ public class SingleEndpointConfiguration   {
       return false;
     }
     SingleEndpointConfiguration singleEndpointConfiguration = (SingleEndpointConfiguration) o;
-    return Objects.equals(this.path, singleEndpointConfiguration.path) &&
+    return Objects.equals(this.name, singleEndpointConfiguration.name) &&
+        Objects.equals(this.path, singleEndpointConfiguration.path) &&
         Objects.equals(this.method, singleEndpointConfiguration.method) &&
-        Objects.equals(this.fields, singleEndpointConfiguration.fields);
+        Objects.equals(this.input, singleEndpointConfiguration.input) &&
+        Objects.equals(this.output, singleEndpointConfiguration.output);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(path, method, fields);
+    return Objects.hash(name, path, method, input, output);
   }
 
   @Override
@@ -154,9 +210,11 @@ public class SingleEndpointConfiguration   {
     StringBuilder sb = new StringBuilder();
     sb.append("class SingleEndpointConfiguration {\n");
     
+    sb.append("    name: ").append(toIndentedString(name)).append("\n");
     sb.append("    path: ").append(toIndentedString(path)).append("\n");
     sb.append("    method: ").append(toIndentedString(method)).append("\n");
-    sb.append("    fields: ").append(toIndentedString(fields)).append("\n");
+    sb.append("    input: ").append(toIndentedString(input)).append("\n");
+    sb.append("    output: ").append(toIndentedString(output)).append("\n");
     sb.append("}");
     return sb.toString();
   }
