# service-generator/swagger_definitions/swagger.yaml
@@ -16,15 +16,15 @@ info:
 host: petstore.swagger.io
 basePath: /
 tags:
-  - name: info
+  - name: services
     description: Returns base information about application api
 schemes:
   - http
 paths:
-  /info:
+  /services:
     get:
       tags:
-        - info
+        - services
       summary: Returns api specyfication
       description: Returns all informations about how to run calculations on microservice
       produces:
@@ -33,26 +33,24 @@ paths:
         '200':
           description: successful operation
           schema:
-            items:
-              $ref: '#/definitions/ServiceInformation'
+            $ref: '#/definitions/ServiceInformation'
         '400':
           description: Invalid status value
-  '/info/func/{funcId}':
+  '/services/{service_name}':
     get:
       tags:
-        - info
+        - services
       summary: Find specyfication of concrete endpoint
       description: Returns a single function description
       operationId: 'func/{funcId}'
       produces:
         - application/json
       parameters:
-        - name: funcId
+        - name: service_name
           in: path
           description: ID of func to return
           required: true
-          type: integer
-          format: int64
+          type: string
       responses:
         '200':
           description: successful operation
@@ -75,10 +73,15 @@ definitions:
   SingleEndpointConfiguration:
     type: object
     required:
+      - name
       - path
       - method
-      - fields
+      - input
+      - output
     properties:
+      name:
+        description: Short service name
+        type: string
       path:
         description: relative path to enpoint
         type: string
@@ -89,8 +92,13 @@ definitions:
           - GET
           - PUT
           - POST
-      fields:
-        description: Detailed filed descriptions
+      input:
+        description: Detailed input descriptions
+        type: array
+        items:
+          $ref: '#/definitions/FieldDefinition'
+      output:
+        description: Detailed input descriptions
         type: array
         items:
           $ref: '#/definitions/FieldDefinition'
